Added embedded ads in recyclerView and RecyclerViewPauseOnScrollListener helped to stop loading when recyclerView is scrolling.

--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="270dp"
-    android:background="@drawable/recepty"
+    android:background="@drawable/kitchener"
     android:orientation="vertical"
     android:paddingTop="25dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
@@ -13,5 +13,5 @@
         android:layout_height="64dp"
         android:layout_margin="16dp"
         android:elevation="4dp"
-        tools:src="@mipmap/ic_launcher"/>
+        tools:src="@mipmap/icon"/>
 </RelativeLayout>
