--- a/app/src/main/res/layout/bookmark_menu.xml
+++ b/app/src/main/res/layout/bookmark_menu.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/drawer_item_color">
     <TextView
         android:id="@+id/ll_tv_name_of_bookmark_list"
         android:layout_width="wrap_content"
@@ -14,6 +15,7 @@
         android:paddingTop="15dp"
         android:paddingLeft="24dp"
         android:textSize="20sp"
+        android:textColor="@color/list_background"
         tools:text="text" />
     <View
         android:id="@+id/rli_v_separator_up"
