--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/drawer_item_color">
 
     <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="5dp"
-        card_view:cardElevation="5dp"
-        card_view:contentPadding="10dp">
+        card_view:cardCornerRadius="7dp"
+        card_view:cardElevation="7dp"
+        card_view:cardUseCompatPadding="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -21,9 +22,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
+                android:textColor="@color/text_color"
                 android:textSize="17sp"
-                android:typeface="serif"
-                android:textColor="@color/text_color"/>
+                android:typeface="serif" />
 
             <org.apmem.tools.layouts.FlowLayout
                 android:id="@+id/rli_ll_images_container"
@@ -32,26 +33,29 @@
                 android:layout_below="@+id/rli_tv_name_list"
                 android:gravity="fill"
                 android:orientation="horizontal"></org.apmem.tools.layouts.FlowLayout>
+
             <RelativeLayout
                 android:id="@+id/rli_rl_more"
-                android:background="?attr/selectableItemBackground"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/rli_ll_images_container">
-            <TextView
-                android:id="@+id/rli_tv_description_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:textColor="@color/text_color"/>
+                android:layout_below="@+id/rli_ll_images_container"
+                android:background="?attr/selectableItemBackground">
+
+                <TextView
+                    android:id="@+id/rli_tv_description_list"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text_color"
+                    android:textSize="15sp" />
+
                 <ImageView
                     android:id="@+id/rli_im_more"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/rli_tv_description_list"
                     android:src="@drawable/ic_more_horiz_black_24dp"
-                    android:tint="@color/color_image"
-                    android:layout_below="@+id/rli_tv_description_list"/>
-           </RelativeLayout>
+                    android:tint="@color/color_image" />
+            </RelativeLayout>
 
             <View
                 android:id="@+id/rli_v_separator"
@@ -76,8 +80,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
                     android:layout_marginTop="9dp"
-                    android:tint="@color/color_image"
-                    android:src="@drawable/ic_save_black_24dp" />
+                    android:src="@drawable/ic_save_black_24dp"
+                    android:tint="@color/color_image" />
             </FrameLayout>
 
             <FrameLayout
@@ -94,8 +98,8 @@
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="9dp"
-                    android:tint="@color/color_image"
-                    android:src="@drawable/ic_star_border_black_24dp" />
+                    android:src="@drawable/ic_star_border_black_24dp"
+                    android:tint="@color/color_image" />
             </FrameLayout>
 
             <FrameLayout
@@ -106,14 +110,15 @@
                 android:layout_below="@+id/rli_v_separator"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true">
+
                 <ImageView
                     android:id="@+id/rli_iv_panel_share_item"
                     android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
                     android:layout_marginTop="9dp"
-                    android:tint="@color/color_image"
-                    android:src="@drawable/ic_share_black_24dp" />
+                    android:src="@drawable/ic_share_black_24dp"
+                    android:tint="@color/color_image" />
             </FrameLayout>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
