--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -10,6 +10,13 @@
             android:textColor="@color/text_color"
             android:title="@string/cook_good" />
         <item
+            android:id="@+id/drawer_recipes"
+            android:icon="@drawable/menu_icon_2"
+            android:state_focused="true"
+            android:state_pressed="false"
+            android:textColor="@color/text_color"
+            android:title="@string/recipes" />
+        <item
             android:id="@+id/drawer_fitness_recipe"
             android:icon="@drawable/chef15"
             android:textColor="@color/text_color"
@@ -38,6 +45,22 @@
             android:tint="@color/text_color"
             android:textColor="@color/text_color"
             android:title="@string/useful_recipe" />
+        <item
+            android:id="@+id/drawer_lose_weight_delicious"
+            android:icon="@drawable/menu_icon_1"
+            android:state_focused="true"
+            android:state_pressed="false"
+            android:tint="@color/text_color"
+            android:textColor="@color/text_color"
+            android:title="@string/lose_weight_delicious" />
+        <item
+        android:id="@+id/drawer_diet_recipes"
+        android:icon="@drawable/menu_icon_3"
+        android:state_focused="true"
+        android:state_pressed="false"
+        android:tint="@color/text_color"
+        android:textColor="@color/text_color"
+        android:title="@string/diet_recipes" />
         <item
             android:id="@+id/drawer_bookmark"
             android:icon="@drawable/ic_star_border_black_24dp"
