--- a/app/src/main/res/layout/ad_embedded_in_feed.xml
+++ b/app/src/main/res/layout/ad_embedded_in_feed.xml
@@ -17,7 +17,7 @@
             android:id="@+id/adView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            ads:adSize="MEDIUM_RECTANGLE"
+            ads:adSize="BANNER"
             ads:adUnitId="@string/banner_ad_unit_id"/>
     </android.support.v7.widget.CardView>
 </LinearLayout>
